--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
 		"tailwindcss": "^3.4.10",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"svelte-routing": "^2.13.0"
+	}
 }
